# Aura-U

./: CMakeLists.txt  README.md  aura-u.desktop
dbus/: aura-u.xml  io.AuraU.conf
include/: AuraCtrl.h  DBusClient.h  DBusServer.h  InputListener.h  MainWindow.h  UsbCore.h
src/app/: DBusClient.cpp  MainWindow.cpp  main.cpp
src/daemon/: AuraCtrl.cpp  DBusServer.cpp  InputListener.cpp  UsbCore.cpp  main.cpp
systemd/: daura-u.service.in
